--- a/my-vpc.yaml
+++ b/my-vpc.yaml
@@ -213,36 +213,31 @@ Outputs:
 
   VPCId:
     Description: "VPCId of VPC"
-    Value:
-      Ref: "VPC"
+    Value: !Ref "VPC"
     Export:
       Name: !Sub "${AWS::Region}-${AWS::StackName}-VPC"
 
   PublicSubnet0:
     Description: "SubnetId of public subnet 0"
-    Value:
-      Ref: "PublicSubnet0"
+    Value: !Ref "PublicSubnet0"
     Export:
       Name: !Sub "${AWS::Region}-${AWS::StackName}-PublicSubnet0"
 
   PublicSubnet1:
     Description: "SubnetId of public subnet 1"
-    Value:
-      Ref: "PublicSubnet1"
+    Value: !Ref "PublicSubnet1"
     Export:
       Name: !Sub "${AWS::Region}-${AWS::StackName}-PublicSubnet1"
 
   PrivateSubnet0:
     Description: "SubnetId of private subnet 0"
-    Value:
-      Ref: "PrivateSubnet0"
+    Value: !Ref "PrivateSubnet0"
     Export:
       Name: !Sub "${AWS::Region}-${AWS::StackName}-PrivateSubnet0"
 
   PrivateSubnet1:
     Description: "SubnetId of private subnet 1"
-    Value:
-      Ref: "PrivateSubnet1"
+    Value: !Ref "PrivateSubnet1"
     Export:
       Name: !Sub "${AWS::Region}-${AWS::StackName}-PrivateSubnet1"
 
